--- a/events/Orbis86Web3Trendsin2024.toml
+++ b/events/Orbis86Web3Trendsin2024.toml
@@ -16,10 +16,10 @@ date = "2023-12-05"
 days = 1
 
 # the event times (shows up in the event card)
-times = "15:30 PM - 19:30 PM"
+times = "15:30 - 19:30"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "(TBA)"
+venueName = "TBA"
 
 # the event venue address (will show up on a map -- TODO)
 venueAddress = "TBA"
@@ -37,7 +37,7 @@ difficulty = "Free"
 tags = ["Other"]
 
 # a color, to group key events visually. use sparingly
-color="orange"
+color="purple"
 
 # A small logomark for the corner of the event
 #logomark = "/logomarks/Compute+Over+Data+Working+Group+Logo.png"
