removed emoticons in event names

--- a/events/IBW23PreConferenceVIPDinner.toml
+++ b/events/IBW23PreConferenceVIPDinner.toml
@@ -1,6 +1,6 @@
 
 # the name of your track or event
-name = "👩‍🎤 IBW'23 Pre-Conference VIP Dinner 👨‍🎤"
+name = "IBW'23 Pre-Conference VIP Dinner"
 
 # the name of the group organizing the event
 org =  "Hashed Emergent"
