--- a/events/hashedFoundersNight.toml
+++ b/events/hashedFoundersNight.toml
@@ -1,6 +1,6 @@
 
 # the name of your track or event
-name = "#️ Hashed Founders Night 🌙"
+name = "#️ Hashed Founders Night"
 
 # the name of the group organizing the event
 org =  "Hashed Emergent"
