--- a/events/Metamorphosis2023.toml
+++ b/events/Metamorphosis2023.toml
@@ -1,25 +1,25 @@
 
 # the name of your track or event
-name = "IBW'23 Conference - Day 1"
+name = "Metamorphosis 2023"
 
 # the name of the group organizing the event
-org =  "Hashed Emergent"
+org =  "Octaloop"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://indiablockchainweek.com/&sa=D&source=editors&ust=1701783124620899&usg=AOvVaw3Tag11Uzoh8XQ5tgDORZK5"
+website = "https://www.google.com/url?q=https://metamorphosis.octaloop.com/bengaluru/&sa=D&source=editors&ust=1701783124716651&usg=AOvVaw0YxvDQyIPUUJx4bQi1g6rR"
 
 # the start date of the event
-date = "2023-12-06"
+date = "2023-12-09"
 
 # how many days the event lasts (1 - N)
-days = 1
+days = 2
 
 # the event times (shows up in the event card)
-times = "9:00 - 18:00"
+times = "TBA - TBA"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "[Sheraton Grand Bengaluru Whitefield](https://www.google.com/url?q=https://goo.gl/maps/iQyrjYhJSymRyzvR9&sa=D&source=editors&ust=1701783124620723&usg=AOvVaw0Bu1dkBTHRwrkdOI_qQ5rA)"
+venueName = "[The Den Bengaluru](https://www.google.com/url?q=https://www.google.com/maps/dir//The%2BDen%2Bbangalore/data%3D!4m6!4m5!1m1!4e2!1m2!1m1!1s0x3bae11ef82478417:0xb16280be4e67f5ff?sa%3DX%26ved%3D2ahUKEwim5oOu_JKCAxXfa2wGHVGKD-cQ9Rd6BAgVEAA%26ved%3D2ahUKEwim5oOu_JKCAxXfa2wGHVGKD-cQ9Rd6BAggEAQ&sa=D&source=editors&ust=1701783124716431&usg=AOvVaw1lJFhLHm5j6d40W6Jdoc31)"
 
 # the event venue address (will show up on a map -- TODO)
 venueAddress = "TBA"
