--- a/events/BNBChainIndiaMeetupBangalore.toml
+++ b/events/BNBChainIndiaMeetupBangalore.toml
@@ -7,7 +7,7 @@ org =  "BNB Chain"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/BNBbangalore&sa=D&source=editors&ust=1701783124646510&usg=AOvVaw0XShijOZJCPiD6pmJJONkO"
+website = "https://lu.ma/BNBbangalore"
 
 # the start date of the event
 date = "2023-12-06"
