--- a/events/ETHIndiaBuildersMeetup.toml
+++ b/events/ETHIndiaBuildersMeetup.toml
@@ -7,7 +7,7 @@ org =  "Caliber x AllianceDAO"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/43qwst7j&sa=D&source=editors&ust=1701783124695707&usg=AOvVaw16OjEDqbQIodxf7gWC9akK"
+website = "https://lu.ma/43qwst7j"
 
 # the start date of the event
 date = "2023-12-08"
