--- a/events/NamasteICPOnChainNight.toml
+++ b/events/NamasteICPOnChainNight.toml
@@ -7,7 +7,7 @@ org =  "ICP Events"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/NamasteICP&sa=D&source=editors&ust=1701783124640979&usg=AOvVaw0fjZadDHW2-tPEiDNlscm-"
+website = "https://lu.ma/NamasteICP"
 
 # the start date of the event
 date = "2023-12-06"
