--- a/events/OGDecentralNexusCXOConnect.toml
+++ b/events/OGDecentralNexusCXOConnect.toml
@@ -7,7 +7,7 @@ org =  "OG Club"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/OGDecentralNexus&sa=D&source=editors&ust=1701783124695237&usg=AOvVaw0H-cCIO5UgECtm-aVxz_WU"
+website = "https://lu.ma/OGDecentralNexus"
 
 # the start date of the event
 date = "2023-12-08"
