--- a/events/PolkaMixPolkadotNetworkingNight.toml
+++ b/events/PolkaMixPolkadotNetworkingNight.toml
@@ -7,7 +7,7 @@ org =  "Polkadot Now India"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/Polka_Mix&sa=D&source=editors&ust=1701783124706453&usg=AOvVaw1TJH76RJyAp1A-sTfmM1hu"
+website = "https://lu.ma/Polka_Mix"
 
 # the start date of the event
 date = "2023-12-08"
