--- a/events/PowerloomDeFiDataDay.toml
+++ b/events/PowerloomDeFiDataDay.toml
@@ -7,7 +7,7 @@ org =  "Powerloom"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/powerloomConf&sa=D&source=editors&ust=1701783124619559&usg=AOvVaw1CGsCsfDnnmOdRCnAO5L76"
+website = "https://lu.ma/powerloomConf"
 
 # the start date of the event
 date = "2023-12-05"
