--- a/events/ReflexicalUnveilingSuccess.toml
+++ b/events/ReflexicalUnveilingSuccess.toml
@@ -7,7 +7,7 @@ org =  "Reflexical"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/ryyn88aw&sa=D&source=editors&ust=1701783124707501&usg=AOvVaw1JuiH0GFLf8e2uWHl4DMzh"
+website = "https://lu.ma/ryyn88aw"
 
 # the start date of the event
 date = "2023-12-08"
