--- a/events/ShardeumIndiabiggestProofofCommunity.toml
+++ b/events/ShardeumIndiabiggestProofofCommunity.toml
@@ -7,7 +7,7 @@ org =  "Shardeum"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/india-biggest-poc&sa=D&source=editors&ust=1701783124717210&usg=AOvVaw1-ner1RBYp09fD7SNChj7I"
+website = "https://lu.ma/india-biggest-poc"
 
 # the start date of the event
 date = "2023-12-09"
