--- a/events/StarknetHouseIndiaStarknet.toml
+++ b/events/StarknetHouseIndiaStarknet.toml
@@ -8,7 +8,7 @@ org =  "Starknet"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://www.starknet.house/india-2023&sa=D&source=editors&ust=1701783124582156&usg=AOvVaw1XY4aielBgx-8gKm-7x1D1"
+website = "https://www.starknet.house/india-2023"
 
 # the start date of the event
 date = "2023-12-01"
