--- a/events/SupraIntraLayerDay.toml
+++ b/events/SupraIntraLayerDay.toml
@@ -7,7 +7,7 @@ org =  "Supra"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/c5f2r6w2&sa=D&source=editors&ust=1701783124607130&usg=AOvVaw2ODqAdCrLBhE5SLTq5Tf1s"
+website = "https://lu.ma/c5f2r6w2"
 
 # the start date of the event
 date = "2023-12-05"
