--- a/events/Web3SocialDhamaka.toml
+++ b/events/Web3SocialDhamaka.toml
@@ -7,7 +7,7 @@ org =  "CyberConnect"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/web3socialdhamaka&sa=D&source=editors&ust=1701783124723199&usg=AOvVaw2YyD_4XHpg2a3CdJy5x3Tu"
+website = "https://lu.ma/web3socialdhamaka"
 
 # the start date of the event
 date = "2023-12-10"
