--- a/events/Web3preneurIndiaEdition.toml
+++ b/events/Web3preneurIndiaEdition.toml
@@ -7,7 +7,7 @@ org =  "Blockon Capital and Oddiyana Ventures"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://www.web3preneur.events/rsvp/?event%3Dindia&sa=D&source=editors&ust=1701783124717763&usg=AOvVaw1BGh31XvPyEypyhnBmYSKC"
+website = "https://www.web3preneur.events/rsvp/?event%3Dindia"
 
 # the start date of the event
 date = "2023-12-09"
