--- a/events/blockTalksBengaluru.toml
+++ b/events/blockTalksBengaluru.toml
@@ -7,7 +7,7 @@ org =  "CoinEx"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/blocktalks-bengaluru&sa=D&source=editors&ust=1701783124667536&usg=AOvVaw14WN207h0NcZ4srQW5Ph5Q"
+website = "https://lu.ma/blocktalks-bengaluru"
 
 # the start date of the event
 date = "2023-12-07"
