--- a/events/blockchainTechFest2023.toml
+++ b/events/blockchainTechFest2023.toml
@@ -7,7 +7,7 @@ org =  "Hyperledger India Chapter"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://www.townscript.com/e/blockchain-techfest-2023-002240&sa=D&source=editors&ust=1701783124718300&usg=AOvVaw20_7Bccmodqn9C-cDokSzu"
+website = "https://www.townscript.com/e/blockchain-techfest-2023-002240"
 
 # the start date of the event
 date = "2023-12-09"
