--- a/events/cryptoInvestorsBreakfastMeetup.toml
+++ b/events/cryptoInvestorsBreakfastMeetup.toml
@@ -7,7 +7,7 @@ org =  "Pi42, TaxNodes, Wefi, LogX"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/web3.collective.ibw&sa=D&source=editors&ust=1701783124712554&usg=AOvVaw0Sj1wKXM5sUzWjsgGXCJ28"
+website = "https://lu.ma/web3.collective.ibw"
 
 # the start date of the event
 date = "2023-12-08"
