--- a/events/2XyourUXWeb3Mixer.toml
+++ b/events/2XyourUXWeb3Mixer.toml
@@ -7,7 +7,7 @@ org =  "Arcana Network"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/2X-your-UX-mixer&sa=D&source=editors&ust=1701783124671458&usg=AOvVaw3Pt7glWdHyfZCrliKcuSrl"
+website = "https://lu.ma/2X-your-UX-mixer"
 
 # the start date of the event
 date = "2023-12-07"
