--- a/events/ETHIndia2023.toml
+++ b/events/ETHIndia2023.toml
@@ -7,7 +7,7 @@ org =  "Devfolio, ETHGlobal"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://ethindia.co/&sa=D&source=editors&ust=1701783124671934&usg=AOvVaw2p_-QXk5VRyt_bGJzdcLDn"
+website = "https://ethindia.co"
 
 # the start date of the event
 date = "2023-12-08"
@@ -19,7 +19,7 @@ days = 3
 times = "12/08 13:00 - 23:59, 12/09 TBA - TBA, 12/10 8:00 - 16:00"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "[KTPO Convention Centre, Whitefield](https://www.google.com/url?q=https://maps.app.goo.gl/e6piDMM6ZrqULw2R6&sa=D&source=editors&ust=1701783124671786&usg=AOvVaw2fhjmuAJ-NuSmrCyqEjnVi)"
+venueName = "[KTPO Convention Centre, Whitefield](https://maps.app.goo.gl/e6piDMM6ZrqULw2R6)"
 
 # the event venue address (will show up on a map -- TODO)
 venueAddress = "TBA"
