--- a/events/EscapeVelocityNarrativesForNextBullRun.toml
+++ b/events/EscapeVelocityNarrativesForNextBullRun.toml
@@ -7,7 +7,7 @@ org =  ""
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/escape_velocity&sa=D&source=editors&ust=1701783124720990&usg=AOvVaw1TiWuECCFLLqncBztEwTLn"
+website = "https://lu.ma/escape_velocity"
 
 # the start date of the event
 date = "2023-12-09"
