--- a/events/EthIndiaFounderBuidlersTribe.toml
+++ b/events/EthIndiaFounderBuidlersTribe.toml
@@ -8,7 +8,7 @@ org =  "Reclaim, Polygon and Buidlers Tribe"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/Ethindia-founderhouse&sa=D&source=editors&ust=1701783124583694&usg=AOvVaw2FU65rrDteg3BOmtv66eLR"
+website = "https://lu.ma/Ethindia-founderhouse"
 
 # the start date of the event
 date = "2023-12-01"
