--- a/events/IBW23PreConferenceVIPDinner.toml
+++ b/events/IBW23PreConferenceVIPDinner.toml
@@ -7,7 +7,7 @@ org =  "Hashed Emergent"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://indiablockchainweek.com/&sa=D&source=editors&ust=1701783124603020&usg=AOvVaw0GPB5xZupQnCDlzT6w8m9b"
+website = "https://indiablockchainweek.com"
 
 # the start date of the event
 date = "2023-12-05"
