--- a/events/IBWEdition2OpeningPartBolltywoodNight.toml
+++ b/events/IBWEdition2OpeningPartBolltywoodNight.toml
@@ -7,7 +7,7 @@ org =  "Block On, NuFi & OG Club"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/IBWOpeningParty2023?utm_source%3DOGclubDAO&sa=D&source=editors&ust=1701783124645638&usg=AOvVaw1vmR-dEl7Huoh-hZt2JDZf"
+website = "https://lu.ma/IBWOpeningParty2023"
 
 # the start date of the event
 date = "2023-12-06"
