--- a/events/ICPBuilderMixer.toml
+++ b/events/ICPBuilderMixer.toml
@@ -7,7 +7,7 @@ org =  "ICP & Social3"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/iq017rnp&sa=D&source=editors&ust=1701783124591845&usg=AOvVaw1x-B6UbyL6m3QWuYeTtsNI"
+website = "https://lu.ma/iq017rnp"
 
 # the start date of the event
 date = "2023-12-04"
