--- a/events/ICPCypherspace@IBW2023.toml
+++ b/events/ICPCypherspace@IBW2023.toml
@@ -7,7 +7,7 @@ org =  "ICP Events"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/ICPCypherspaceIBW&sa=D&source=editors&ust=1701783124669365&usg=AOvVaw0lCmsnajlo2V4I3kopWy0r"
+website = "https://lu.ma/ICPCypherspaceIBW"
 
 # the start date of the event
 date = "2023-12-07"
