--- a/events/LattesLeadership.toml
+++ b/events/LattesLeadership.toml
@@ -7,7 +7,7 @@ org =  "Web3 Queens"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/web3queens&sa=D&source=editors&ust=1701783124711958&usg=AOvVaw0pgLyVvVmxtMFXDt_mKF1o"
+website = "https://lu.ma/web3queens"
 
 # the start date of the event
 date = "2023-12-08"
