--- a/events/Orbis86Web3Trendsin2024.toml
+++ b/events/Orbis86Web3Trendsin2024.toml
@@ -7,7 +7,7 @@ org =  "Hedera"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/orbis86futureoftechblore23&sa=D&source=editors&ust=1701783124620084&usg=AOvVaw2w-aupedyNG5qC586NZ5Qg"
+website = "https://lu.ma/orbis86futureoftechblore23"
 
 # the start date of the event
 date = "2023-12-05"
