--- a/events/ProjectX.toml
+++ b/events/ProjectX.toml
@@ -7,7 +7,7 @@ org =  "Capx"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/1njlz4ij&sa=D&source=editors&ust=1701783124706975&usg=AOvVaw2uOPdSg0WKLx2y2L-ZRUhb"
+website = "https://lu.ma/1njlz4ij"
 
 # the start date of the event
 date = "2023-12-08"
