--- a/events/PurpleNightbyFarcasterandLighthouse.toml
+++ b/events/PurpleNightbyFarcasterandLighthouse.toml
@@ -7,7 +7,7 @@ org =  "Lighthouse"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/vkyjb5xf&sa=D&source=editors&ust=1701783124724079&usg=AOvVaw32vHE2SnkyJNH3pmkZyDRv"
+website = "https://lu.ma/vkyjb5xf"
 
 # the start date of the event
 date = "2023-12-10"
