--- a/events/QuillConCXOMixerIndiaEdition.toml
+++ b/events/QuillConCXOMixerIndiaEdition.toml
@@ -7,7 +7,7 @@ org =  "QuillAudits"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/QuillConIndia&sa=D&source=editors&ust=1701783124714051&usg=AOvVaw3OmRFlLs-i7EJJ6x-mP_vZ"
+website = "https://lu.ma/QuillConIndia"
 
 # the start date of the event
 date = "2023-12-09"
