--- a/events/RWABashAmalgamating.toml
+++ b/events/RWABashAmalgamating.toml
@@ -7,7 +7,7 @@ org =  "Brú Finance"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/BruFinance&sa=D&source=editors&ust=1701783124643206&usg=AOvVaw1xPulSD1hHrwh8VteL9y68"
+website = "https://lu.ma/BruFinance"
 
 # the start date of the event
 date = "2023-12-06"
@@ -19,7 +19,7 @@ days = 1
 times = "17:00 PM - 20:00 PM"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "[Toscano](https://www.google.com/url?q=https://maps.app.goo.gl/DE3mJK6P1m35SaLZ7&sa=D&source=editors&ust=1701783124643033&usg=AOvVaw3uugS8TyLk7ut0BGpPmHFv)"
+venueName = "[Toscano](https://maps.app.goo.gl/DE3mJK6P1m35SaLZ7)"
 
 # the event venue address (will show up on a map -- TODO)
 venueAddress = "TBA"
