--- a/events/RoadtoethDenver2024.toml
+++ b/events/RoadtoethDenver2024.toml
@@ -7,7 +7,7 @@ org =  "BukTrips"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/IBWBukTrips&sa=D&source=editors&ust=1701783124642688&usg=AOvVaw2SixWkzKyuZLLMb93kzOMb"
+website = "https://lu.ma/IBWBukTrips"
 
 # the start date of the event
 date = "2023-12-06"
