--- a/events/SNPITLaunchParty.toml
+++ b/events/SNPITLaunchParty.toml
@@ -7,7 +7,7 @@ org =  "Blockwee"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/snpit&sa=D&source=editors&ust=1701783124666023&usg=AOvVaw2I_M6duLLwdFImOhDa9bQ9"
+website = "https://lu.ma/snpit"
 
 # the start date of the event
 date = "2023-12-07"
