--- a/events/StarknetHackerHouseIndia.toml
+++ b/events/StarknetHackerHouseIndia.toml
@@ -8,7 +8,7 @@ org =  "Starknet Foundation"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/starknet_hh_india&sa=D&source=editors&ust=1701783124589660&usg=AOvVaw09GDTXGNiue_tv5XxVIfdI"
+website = "https://lu.ma/starknet_hh_india"
 
 # the start date of the event
 date = "2023-12-03"
