--- a/events/TezDayMeetup.toml
+++ b/events/TezDayMeetup.toml
@@ -7,7 +7,7 @@ org =  "Tezos India"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/tezday02&sa=D&source=editors&ust=1701783124646056&usg=AOvVaw1rGi6Wr8DQ1oRVQq1mngob"
+website = "https://lu.ma/tezday02"
 
 # the start date of the event
 date = "2023-12-06"
