--- a/events/Web3Carnival2023.toml
+++ b/events/Web3Carnival2023.toml
@@ -7,7 +7,7 @@ org =  ""
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://www.web3carnival.world/&sa=D&source=editors&ust=1701783124591007&usg=AOvVaw1bmJB8rP0ItTvDzf50ZrXH"
+website = "https://www.web3carnival.world"
 
 # the start date of the event
 date = "2023-12-04"
