--- a/events/Web3InnovatorsNexusBangalore2023.toml
+++ b/events/Web3InnovatorsNexusBangalore2023.toml
@@ -7,7 +7,7 @@ org =  "Web3 Innovators Nexus"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/juvgo09b&sa=D&source=editors&ust=1701783124705181&usg=AOvVaw1G6ugigHiB8wuluM9UKCy7"
+website = "https://lu.ma/juvgo09b"
 
 # the start date of the event
 date = "2023-12-08"
@@ -19,7 +19,7 @@ days = 1
 times = "17:00 - 21:00"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "[Draper Startup House for Entrepreneurs](https://www.google.com/url?q=https://maps.app.goo.gl/wjwXXksZnTMP9YFc6&sa=D&source=editors&ust=1701783124696086&usg=AOvVaw0Cv34EjTq6oSkZ-Zqyji7X)"
+venueName = "[Draper Startup House for Entrepreneurs](https://maps.app.goo.gl/wjwXXksZnTMP9YFc6)"
 
 # the event venue address (will show up on a map -- TODO)
 venueAddress = "TBA"
