--- a/events/Web3ProductCraftersBrunchEdition2.toml
+++ b/events/Web3ProductCraftersBrunchEdition2.toml
@@ -7,7 +7,7 @@ org =  "Particle Network"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/productbrunch2&sa=D&source=editors&ust=1701783124664888&usg=AOvVaw2NDBKt_lpsBEeUDwofCDth"
+website = "https://lu.ma/productbrunch2"
 
 # the start date of the event
 date = "2023-12-07"
