--- a/events/WomeninTechIBW.toml
+++ b/events/WomeninTechIBW.toml
@@ -7,7 +7,7 @@ org =  "Hashed Open Dialogue for Law (HODL)"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/6nvd12q3&sa=D&source=editors&ust=1701783124606302&usg=AOvVaw1RxvsPOhHx3bWe1lRZKCi_"
+website = "https://lu.ma/6nvd12q3"
 
 # the start date of the event
 date = "2023-12-05"
@@ -19,7 +19,7 @@ days = 1
 times = "17:30 - 20:30"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "[Fox in the Field](https://www.google.com/url?q=https://maps.app.goo.gl/UsQUbvZpqHi6AmCb9&sa=D&source=editors&ust=1701783124606135&usg=AOvVaw1oCeFEtzqFFjzotMkSib2s)"
+venueName = "[Fox in the Field](https://maps.app.goo.gl/UsQUbvZpqHi6AmCb9)"
 
 # the event venue address (will show up on a map -- TODO)
 venueAddress = "TBA"
