--- a/events/ZeroKnowledgeProofsUnleashedIndia.toml
+++ b/events/ZeroKnowledgeProofsUnleashedIndia.toml
@@ -7,7 +7,7 @@ org =  "TPG"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/ZKUnleashed_India&sa=D&source=editors&ust=1701783124642215&usg=AOvVaw2q8wBLub-tG8LklftCqnhu"
+website = "https://lu.ma/ZKUnleashed_India"
 
 # the start date of the event
 date = "2023-12-06"
