--- a/events/autonomousWorldsGathering.toml
+++ b/events/autonomousWorldsGathering.toml
@@ -7,7 +7,7 @@ org =  "MovetheBlock"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/awgathering-blr&sa=D&source=editors&ust=1701783124705910&usg=AOvVaw2XkXCiWMo6359t6L1_mrgl"
+website = "https://lu.ma/awgathering-blr"
 
 # the start date of the event
 date = "2023-12-08"
