--- a/events/bharatversetheSandboxIndia.toml
+++ b/events/bharatversetheSandboxIndia.toml
@@ -7,7 +7,7 @@ org =  "Sandbox India"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/SandboxIndiaLandsaleLaunch&sa=D&source=editors&ust=1701783124617403&usg=AOvVaw0ecV_LTSsB7bNVPcO8od_h"
+website = "https://lu.ma/SandboxIndiaLandsaleLaunch"
 
 # the start date of the event
 date = "2023-12-05"
