--- a/events/billionReasonsNammaBengaluru.toml
+++ b/events/billionReasonsNammaBengaluru.toml
@@ -7,7 +7,7 @@ org =  "Push Protocol"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/brb-bengaluru&sa=D&source=editors&ust=1701783124605446&usg=AOvVaw3AK6tQY4y_7AfB27zSo0Jb"
+website = "https://lu.ma/brb-bengaluru"
 
 # the start date of the event
 date = "2023-12-05"
