--- a/events/brincitonWeb3.toml
+++ b/events/brincitonWeb3.toml
@@ -7,7 +7,7 @@ org =  "Brinc"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/w0ea3h6b&sa=D&source=editors&ust=1701783124719400&usg=AOvVaw0cDak2Y9vtJfyzfpcQFAxV"
+website = "https://lu.ma/w0ea3h6b"
 
 # the start date of the event
 date = "2023-12-09"
