--- a/events/buildersAssembleIBW23Edition.toml
+++ b/events/buildersAssembleIBW23Edition.toml
@@ -7,7 +7,7 @@ org =  "Nordek"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/BuildersAssembleBLR2&sa=D&source=editors&ust=1701783124718916&usg=AOvVaw1vwlgKd7ZBJTj8OxTWseei"
+website = "https://lu.ma/BuildersAssembleBLR2"
 
 # the start date of the event
 date = "2023-12-09"
