--- a/events/consumerWeb3BuilderMixer.toml
+++ b/events/consumerWeb3BuilderMixer.toml
@@ -7,7 +7,7 @@ org =  ""
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/EthIndiaHappyHour&sa=D&source=editors&ust=1701783124666497&usg=AOvVaw3jHGv-mltO57uDrBiZZ7PD"
+website = "https://lu.ma/EthIndiaHappyHour"
 
 # the start date of the event
 date = "2023-12-07"
