--- a/events/cosmocon2023.toml
+++ b/events/cosmocon2023.toml
@@ -7,7 +7,7 @@ org =  ""
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/cosmocon2023&sa=D&source=editors&ust=1701783124619013&usg=AOvVaw3k64EO-QqmVl_tfWuhHBdg"
+website = "https://lu.ma/cosmocon2023"
 
 # the start date of the event
 date = "2023-12-05"
