--- a/events/dojimaOmnichainMixer.toml
+++ b/events/dojimaOmnichainMixer.toml
@@ -7,7 +7,7 @@ org =  "Dojima Network"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/DojMixer&sa=D&source=editors&ust=1701783124621350&usg=AOvVaw0nexjt0TdO5ebf5PJofU3h"
+website = "https://lu.ma/DojMixer"
 
 # the start date of the event
 date = "2023-12-06"
