--- a/events/dojimaOmnichainSummit.toml
+++ b/events/dojimaOmnichainSummit.toml
@@ -7,7 +7,7 @@ org =  "Dojima Network"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/DojOmniSummit?utm_source%3Dweb3meetups&sa=D&source=editors&ust=1701783124724461&usg=AOvVaw3L-xd2TqUS9tsJ3ewK6V1N"
+website = "https://lu.ma/DojOmniSummit?utm_source%3Dweb3meetups"
 
 # the start date of the event
 date = "2023-12-10"
