--- a/events/doraDelight.toml
+++ b/events/doraDelight.toml
@@ -7,7 +7,7 @@ org =  "DoraHacks"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/doradelight-india&sa=D&source=editors&ust=1701783124591428&usg=AOvVaw1Ki3hLMpiXTuegTKLswoWy"
+website = "https://lu.ma/doradelight-india"
 
 # the start date of the event
 date = "2023-12-04"
