--- a/events/exclusiveHighTeaByLbank.toml
+++ b/events/exclusiveHighTeaByLbank.toml
@@ -7,7 +7,7 @@ org =  "LBank"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/b4ajwvqh&sa=D&source=editors&ust=1701783124617953&usg=AOvVaw14pBQ3_Li8jUeIDuxzHN9T"
+website = "https://lu.ma/b4ajwvqh"
 
 # the start date of the event
 date = "2023-12-05"
