--- a/events/expeleeVolutionWeb3Unleashed.toml
+++ b/events/expeleeVolutionWeb3Unleashed.toml
@@ -7,7 +7,7 @@ org =  "Expelee"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/expeleevolution&sa=D&source=editors&ust=1701783124664369&usg=AOvVaw2PFFzL5-uKPW9o651EKYop"
+website = "https://lu.ma/expeleevolution"
 
 # the start date of the event
 date = "2023-12-07"
