--- a/events/flareDevMeetupBangaloreEdition.toml
+++ b/events/flareDevMeetupBangaloreEdition.toml
@@ -7,7 +7,7 @@ org =  "FlareNetwork"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/FlareDevMeetupBangaloreEdition&sa=D&source=editors&ust=1701783124719998&usg=AOvVaw23RZkO-103TSNhiVDLaPrp"
+website = "https://lu.ma/FlareDevMeetupBangaloreEdition"
 
 # the start date of the event
 date = "2023-12-09"
