--- a/events/intentwtfAccountAbstractionMeetup.toml
+++ b/events/intentwtfAccountAbstractionMeetup.toml
@@ -7,7 +7,7 @@ org =  "Particle Network Events x CyberConnect"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://lu.ma/intentwtf23india&sa=D&source=editors&ust=1701783124618498&usg=AOvVaw0WJ54TppsrnrOb6Fpq0u4R"
+website = "https://lu.ma/intentwtf23india"
 
 # the start date of the event
 date = "2023-12-05"
