--- a/events/pragmaIndia.toml
+++ b/events/pragmaIndia.toml
@@ -6,7 +6,7 @@ org =  "ETH Global"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://ethglobal.com/events/pragma-india&sa=D&source=editors&ust=1701783124663184&usg=AOvVaw0T__2UJ4rVBdJE0Woedint"
+website = "https://ethglobal.com/events/pragma-india"
 
 # the start date of the event
 date = "2023-12-07"
@@ -18,7 +18,7 @@ days = 1
 times = "10:00 - 18:00"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "[The Den Bengaluru](https://www.google.com/url?q=https://maps.app.goo.gl/9ET4X8pPM2gbBoPUA&sa=D&source=editors&ust=1701783124662863&usg=AOvVaw1aIQGUw6VtMXJ8x6tdjKxL)"
+venueName = "[The Den Bengaluru](https://maps.app.goo.gl/9ET4X8pPM2gbBoPUA)"
 
 # the event venue address (will show up on a map -- TODO)
 venueAddress = "TBA"
