--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -22,7 +22,7 @@ jobs:
 
       # Install dependencies
       - name: Install dependencies
-        run: npm install
+        run: npm install --prefix website
 
       # Install Lighthouse CLI globally
       - name: Install Lighthouse CLI
