--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -28,9 +28,9 @@ jobs:
       - name: Install Lighthouse CLI
         run: npm install -g lighthouse
 
-      # Run Lighthouse Report
+      # Run Lighthouse Report in headless mode
       - name: Run Lighthouse Report
-        run: lighthouse https://your-website-url.com --output html --output-path ./lighthouse-report.html
+        run: lighthouse https://your-website-url.com --chrome-flags="--headless --no-sandbox --disable-gpu" --output html --output-path ./lighthouse-report.html
 
       # Upload report as an artifact
       - name: Upload Lighthouse Report as an artifact
